# maze-escape

./: .gitignore  .gitlab-ci.yml  cabal.project  default.nix  maze-escape.cabal  maze.cabal  shell.nix
.nix/: maze-escape.nix  maze.nix
lib/Game/: Maze.hs
lib/Game/Maze/: Data.hs
test/: Spec.hs
