cabal-version:      3.0
name:               maze-escape
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://gitlab.com/Vonfry/maze-escape

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Vonfry
maintainer:         mail@vonfry.name

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md
common deps
    build-depends:    base ==4.*
                    , mtl
                    , ilist
                    , utility-ht

library
    import:           deps
    exposed-modules:  Game.Maze.Data
                    , Game.Maze

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite maze-test
    import:           deps
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    hspec ==2.*
                    , maze-escape
